<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Juego">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="652dp"
        android:text="@string/playing_screen"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <AbsoluteLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="99dp">

        <Button
            android:id="@+id/button12"
            android:layout_width="64dp"
            android:layout_height="62dp"
            android:layout_marginStart="173dp"
            android:layout_marginLeft="173dp"
            android:layout_marginTop="172dp"
            android:background="@drawable/round_button"
            android:onClick="victoryNotification_increaseScore"
            android:rotation="0"
            android:rotationX="0"
            android:rotationY="0"
            android:text=""
            app:backgroundTint="#09EC2F"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="155dp"
            android:layout_marginLeft="155dp"
            android:layout_marginEnd="163dp"
            android:layout_marginRight="163dp"
            android:layout_x="26dp"
            android:layout_y="668dp"
            android:onClick="goMain"
            android:text="@string/button_return" />

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="216dp"
            android:layout_y="667dp"
            android:onClick="playAgain"
            android:text="@string/button_play_again" />

        <TextView
            android:id="@+id/counterValue"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_x="335dp"
            android:layout_y="93dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_x="254dp"
            android:layout_y="93dp"
            android:text="Puntuación:" />

    </AbsoluteLayout>


</androidx.constraintlayout.widget.ConstraintLayout>